create section banner

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
       <a href="#" class="header__link"><img class="header__shopping" src="icons/shopping-bag.svg" alt="icons: shopping-bag"></a>
     </div>
   </header>
-  .c
+  <section class="banner"></section>
 
 </body>
 </html>
