create: section banner

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Your Neno Garden</title>
   <link rel="stylesheet" href="sass/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,7 +23,25 @@
       <a href="#" class="header__link"><img class="header__shopping" src="icons/shopping-bag.svg" alt="icons: shopping-bag"></a>
     </div>
   </header>
-  <section class="banner"></section>
+  <section class="banner">
+    <div class="container">
+      <div class="wrapper">
+        <div class="banner__about">
+          <div class="banner__about-title">
+            <h1 class="banner__about-title-dark">YOUR NANO </h1>
+            <h1 class="banner__about-title-primary">GARDEN</h1>
+          </div>
+          <p class="banner__about-text">From seed to plant in a tiny smart garden. <br> Salads, herbs and small vegetables, grown at home, all year round!</p>
+          <div class="buttons">
+            <button class="button banner__buttons-reservation">Pre-order</button>
+            <button class="button banner__buttons-detail">Read more</button>      
+          </div>
+          <img src="img/garden.png" class="banner__about-garden" alt="garden">
+        </div>
+        <img src="img/showcase.png" alt="showcase">
+      </div>
+    </div>
+  </section>
 
 </body>
 </html>
