--- a/src/index.html
+++ b/src/index.html
@@ -36,12 +36,42 @@
             <button class="button banner__buttons-reservation">Pre-order</button>
             <button class="button banner__buttons-detail">Read more</button>      
           </div>
-          <img src="img/garden.png" class="banner__about-garden" alt="garden">
+          <div class="banner__about-garden"><img src="img/garden.png" class="banner__about-garden-image" alt="garden">
+          </div>
         </div>
+        <div class="banner-showcase">
         <img src="img/showcase.png" alt="showcase">
+      </div>
       </div>
     </div>
   </section>
+  <!-- /banner -->
+  <section class="advantages">
+    <div class="container">
+      <h2 class="advantages__title">What is a Nano Garden for</h2>
+      <div class="advantages__info">
+        <div class="card">
+          <img src="img/card-image-1.jpg" alt="" class="card-image">
+          <span class="card-title">Eco-friendly products 365 days a year</span>
+          <p class="card-text">Fresh, natural berries, vegetables and herbs <br> will be on your table all year round</p>
+        </div>
+        <!-- ./card -->
+        <div class="card">
+          <img src="img/card-image-2.jpg" alt="" class="card-image">
+          <span class="card-title">Landscaping of the home space</span>
+          <p class="card-text">You can grow different crops that will decorate <br> the house and create an atmosphere of comfort</p>
+        </div>
+        <!-- ./card -->
+        <div class="card">
+          <img src="img/card-image-3.jpg" alt="" class="card-image">
+          <span class="card-title">Improving the quality of nutrition</span>
+          <p class="card-text">Smart systems — are a new look at healthy eating</p>
+        </div>
+        <!-- ./card -->
+      </div>
+    </div>
+  </section>
+  <!-- /.advantages -->
 
 </body>
 </html>
