--- a/src/index.html
+++ b/src/index.html
@@ -72,6 +72,15 @@
     </div>
   </section>
   <!-- /.advantages -->
+  <section class="grow">
+    <div class="container">
+      <h2 class="grow__title">What can be grown in Smart Garden</h2>
+      <div class="grow__image">
+        <img src="img/vegitables.png" class="grow__image-vegitables" alt="">
+      </div>
 
+    </div>
+  </section>
+  <!-- /.grow -->
 </body>
 </html>
