--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
   <section class="banner">
     <div class="container">
       <div class="wrapper">
-        <div class="banner__about">
+        <div class="banner_about">
           <div class="banner__about-title">
             <h1 class="banner__about-title-dark">YOUR NANO </h1>
             <h1 class="banner__about-title-primary">GARDEN</h1>
