added: media 980px

--- a/src/index.html
+++ b/src/index.html
@@ -23,13 +23,18 @@
           <li class="header__navigation-item"><a href="#" class="header__link">Contact Us</a></li>
         </ul>
         <a href="#" class="header__link"><img class="header__shopping" src="icons/shopping-bag.svg" alt="icons: shopping-bag"></a>
+        <button class=" menu-button navbar-top__menu-button">
+          <span class="menu-button__line"></span>
+          <span class="menu-button__line"></span>
+          <span class="menu-button__line"></span>
+        </button>
       </div>
     </div>
   </header>
   <section class="banner">
     <div class="container">
       <div class="wrapper">
-        <div class="banner_about">
+        <div class="banner__about">
           <div class="banner__about-title">
             <h1 class="banner__about-title-dark">YOUR NANO </h1>
             <h1 class="banner__about-title-primary">GARDEN</h1>
@@ -55,18 +60,21 @@
       <div class="advantages__info">
         <div class="advantages__card">
           <img src="img/card-image-1.jpg" alt="" class="advantages__card-image">
+          <img src="img/card-image-ad-1.jpg" alt="" class="advantages__card-image--media">
           <span class="advantages__card-title">Eco-friendly products 365 days a year</span>
-          <p class="advantages__card-text">Fresh, natural berries, vegetables and herbs <br> will be on your table all year round</p>
+          <p class="advantages__card-text">Fresh, natural berries, vegetables and herbs will be on your table all year round</p>
         </div>
         <!-- ./card -->
         <div class="advantages__card">
           <img src="img/card-image-2.jpg" alt="" class="advantages__card-image">
+          <img src="img/card-image-ad-2.jpg" alt="" class="advantages__card-image--media">
           <span class="advantages__card-title">Landscaping of the home space</span>
-          <p class="advantages__card-text">You can grow different crops that will decorate <br> the house and create an atmosphere of comfort</p>
+          <p class="advantages__card-text">You can grow different crops that will decorate the house and create an atmosphere of comfort</p>
         </div>
         <!-- ./card -->
         <div class="advantages__card">
           <img src="img/card-image-3.jpg" alt="" class="advantages__card-image">
+          <img src="img/card-image-ad-3.jpg" alt="" class="advantages__card-image--media">
           <span class="advantages__card-title">Improving the quality of nutrition</span>
           <p class="advantages__card-text">Smart systems — are a new look at healthy eating</p>
         </div>
