added: media full

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
             <h1 class="banner__about-title-dark">YOUR NANO </h1>
             <h1 class="banner__about-title-primary">GARDEN</h1>
           </div>
-          <p class="banner__about-text">From seed to plant in a tiny smart garden. <br> Salads, herbs and small vegetables, grown at home, all year round!</p>
+          <p class="banner__about-text">From seed to plant in a tiny smart garden. <br> Salads, herbs and small vegetables, grown at&nbsphome, all year round!</p>
           <div class="buttons">
             <button class="button banner__buttons-reservation">Pre-order</button>
             <button class="button banner__buttons-detail">Read more</button>      
@@ -48,8 +48,8 @@
           </div>
         </div>
         <div class="banner__showcase">
-        <img src="img/showcase.png" class="banner__showcase-image" alt="showcase">
-      </div>
+          <img src="img/showcase.png" class="banner__showcase-image" alt="showcase">
+        </div>
       </div>
     </div>
   </section>
@@ -95,6 +95,58 @@
   <section class="products">
     <div class="container">
       <h2 class="products__title">Our super gardens and indoor vegetable gardens</h2>
+      <!-- Slider main container -->
+      <div class="products__swiper">
+        <!-- Additional required wrapper -->
+        <div class="swiper-wrapper">
+          <!-- Slides -->
+          <div class="swiper-slide">
+            <a href="#" class="products__card products__card-1">
+            <img src="img/products-card/products-1.jpg" alt="image products " class="products__card-image ">
+            <span class="products__card-name">Nano Garden TerraCotta</span>
+            <span class="products__card-price">€149,99 EUR</span>
+          </a></div>
+          <div class="swiper-slide">
+            <a href="#" class="products__card products__card-2">
+            <img src="img/products-card/products-2.jpg" alt="image products" class="products__card-image">
+            <span class="products__card-name">Nano Garden Mimosa Yellow</span>
+            <span class="products__card-price">€109,99 EUR</span>
+            </a>
+          </div>
+          <div class="swiper-slide">
+            <a href="#" class="products__card products__card-3">
+            <img src="img/products-card/products-3.jpg" alt="image products" class="products__card-image">
+            <span class="products__card-name">Nano Garden Forest Green</span>
+            <span class="products__card-price">€99,99 EUR</span>
+            </a>
+          </div>
+          <div class="swiper-slide">
+            <a href="#" class="products__card products__card-4">
+            <img src="img/products-card/products-4.jpg" alt="image products" class="products__card-image">
+            <span class="products__card-name">Nano Garden Rose Quartz</span>
+            <span class="products__card-price">119,99 EUR</span>
+            </a>
+          </div>
+          <div class="swiper-slide">
+            <a href="#" class="products__card products__card-5">
+            <img src="img/products-card/products-5.jpg" alt="image products" class="products__card-image">
+            <span class="products__card-name">Nano Garden Celadon Green</span>
+            <span class="products__card-price">€79,99 EUR</span>
+            </a>
+          </div>
+          <div class="swiper-slide">
+            <a href="#" class="products__card products__card-6">
+            <img src="img/products-card/products-6.jpg" alt="image products" class="products__card-image">
+            <span class="products__card-name">Nano Garden Sand Gray</span>
+            <span class="products__card-price">€89,99 EUR</span>
+            </a>
+          </div>
+        </div>
+        <!-- If we need pagination -->
+        <div class="products__pagination">
+          <div class="swiper-pagination"></div>
+        </div>
+      </div>
       <div class="products__cards">
           <a href="#" class="products__card products__card-1">
             <img src="img/products-card/products-1.jpg" alt="image products " class="products__card-image ">
@@ -148,6 +200,7 @@
           <div class="swiper-slide"><div class="reviews__slider">
             <div class="reviews__image">
             <img src="img/reviews.jpg" alt="Reviews image" class="reviews__image-image">
+            <img src="img/reviews-media.jpg" alt="Reviews image" class="reviews__image-media">
             </div>
             <div class="reviews__text">
             <p class="reviews__text-feedback">I am a huge fan of Hydroponics, I myself have one at home and I love it. It is very cool to see plants growing in front of you, inch by inch.</p>
@@ -159,6 +212,7 @@
           <div class="swiper-slide"><div class="reviews__slider">
             <div class="reviews__image">
             <img src="img/reviews.jpg" alt="Reviews image" class="reviews__image-image">
+            <img src="img/reviews-media.jpg" alt="Reviews image" class="reviews__image-media">
             </div>
             <div class="reviews__text">
             <p class="reviews__text-feedback">I am a huge fan of Hydroponics, I myself have one at home and I love it. It is very cool to see plants growing in front of you, inch by inch.</p>
@@ -170,6 +224,7 @@
           <div class="swiper-slide"><div class="reviews__slider">
             <div class="reviews__image">
             <img src="img/reviews.jpg" alt="Reviews image" class="reviews__image-image">
+            <img src="img/reviews-media.jpg" alt="Reviews image" class="reviews__image-media">
             </div>
             <div class="reviews__text">
             <p class="reviews__text-feedback">I am a huge fan of Hydroponics, I myself have one at home and I love it. It is very cool to see plants growing in front of you, inch by inch.</p>
@@ -178,6 +233,10 @@
             </div>
             </div>
           </div>
+        </div>
+        <!-- If we need pagination -->
+        <div class="reviews__pagination">
+          <div class="swiper-pagination"></div>
         </div>
         <!-- If we need navigation buttons -->
         <div class="reviews__swiper-button">
